[Fix] SVG Line: when resizing the svg was overflowing and which kept the window size too high

--- a/theme/source/assets/css/_layout.scss
+++ b/theme/source/assets/css/_layout.scss
@@ -17,6 +17,8 @@ body {
 		padding: $sizeGutter;
 	}
 
+	position: relative;
+
 	/* VERIFY / DEV: fixes 100vw horizontal scrollbar issue */
     overflow-x: hidden;
     width: 100%;
